tests/rustdoc-ui/issues/ice-raw-str-105334.rs
// https://github.com/rust-lang/rust/issues/105334
impl Vec< br##"*.."## > {}
//~^ ERROR
